# godot-callable-trampoline

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yaml
.vcpkg/ports/godot-cpp/: portfile.cmake  usage  vcpkg.json
.vcpkg/ports/godot-cpp/cmake/: godot-cpp-config.cmake  install.cmake
demo/: Csharp.cs  demo.sln  export_presets.cfg  icon.svg.import  main.gd  main.tscn
demo/addons/godot-callable-trampoline/: godot-callable-trampoline.gdextension
godot-callable-trampoline/: CMakeLists.txt
godot-callable-trampoline/src/: .gitignore  callable-trampoline.hpp  register_types.cpp
